--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,23 +2,25 @@ name: Deploy Static Website to S3
 
 on:
   push:
-    branches:
-      - main   # Runs when you push to main branch
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Sync files to S3
-        run: aws s3 sync . s3://my-static-site-demo-vyshnavvijayan --delete
+      - name: Sync site to S3
+        run: |
+          aws s3 sync . s3://${{ secrets.S3_BUCKET }} --delete \
+            --exclude ".git/*" --exclude ".github/*"
+
